# MyChess_Project

./: CMakeLists.txt  README.md
Chess_Models/: Bishop.cpp  Bishop.h  Chessboard.cpp  Chessboard.h  Chessman.cpp  Chessman.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
Chess_View/: ChessmanView.cpp  ChessmanView.h  GraphicView.cpp  GraphicView.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
